2012-06-21  Roland Levillain  <roland@lrde.epita.fr>

	Use the lazy recorder morpher in apps/morphers/iz.

	* apps/morphers/iz.cc (main): Here.
	Save the sequence of recorder images as PNG images using Magick++.
	(save_colorized): New function.
	* apps/morphers/Makefile.am
	(noinst_PROGRAMS, iz_SOURCES) [HAVE_MAGICKXX]: Build `iz' only if
	Magick++ is available.
	(iz_output.ppm) [HAVE_MAGICKXX]: Likewise.
	(iz_CPPFLAGS, iz_LDFLAGS) [HAVE_MAGICKXX]: New.
	(tmp_iz.avi) [HAVE_MAGICKXX]: New target.
	(MOSTLYCLEANFILES): Add tmp_iz??????.png.

2012-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Add rules to build and run apps/morphers/iz.

	* apps/morphers/Makefile.am (noinst_PROGRAMS): Add iz.
	(iz_SOURCES): New.
	(EXTRA_DIST): Add iz_input.pbm.
	(iz_output.ppm): New target.
	(MOSTLYCLEANFILES): Add tmp_clo.pgm, tmp_dmap.pgm,
	tmp_ws_superpose.ppm, tmp_ws.ppm, tmp_lab.pgm, tmp_iz.pgm,
	tmp_iz.ppm and tmp_iz_input.ppm.

2012-06-20  Thierry Geraud  <thierry.geraud@lrde.epita.fr>

	New example demonstrating the use of influence zones.

	* apps/morphers/iz.cc: New.
	* apps/morphers/iz_input.pbm: New.

2012-06-21  Roland Levillain  <roland@lrde.epita.fr>

	New ``lazy'' recorder morpher in apps/morpher.

	* apps/morphers/lazy_recorder.hh: New.
	* apps/morphers/lazy_recorder.cc: New test.
	* apps/morphers/Makefile.am (noinst_HEADERS):
	Add lazy_recorder.hh.
	(noinst_PROGRAMS): Add lazy_recorder.
	(lazy_recorder_SOURCES): New.
	(MOSTLYCLEANFILES): Add lena-fill-lazy??????.ppm.

2012-06-21  Roland Levillain  <roland@lrde.epita.fr>

	Render the recorder morpher more generic.

	* apps/morphers/recorder.hh (recorder<I>::sequence): Store a
	sequence of concrete images.
	Add missing inline keywords.
	Improve the documentation.

2011-11-28  Roland Levillain  <roland@lrde.epita.fr>

	New morpher example: recording a breadth-first thinning.

	* apps/morphers/recorder-bft.cc: New.
	* apps/morphers/image2d-skel.hh: New.
	* apps/morphers/Makefile.am (noinst_PROGRAMS): Add recorder-bft.